src/npm_install/snapshots/errors___npm_install_detect_error.snap
---
source: buildpacks/nodejs/src/npm_install/errors.rs
---
- Debug Info:
  - test I/O error blah

! Unable to complete buildpack detection
!
! An unexpected error occurred while determining if the Heroku Node.js buildpack should be run for this application. See the log output above for more information.
!
! The causes for this error are unknown. We do not have suggestions for diagnosis or a workaround at this time. You can help our understanding by sharing your buildpack log and a description of the issue at:
! https://github.com/heroku/buildpacks-nodejs/issues
!
! If you're able to reproduce the problem with an example application and the `pack` build tool (https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/), adding that information to the discussion will also help. Once we have more information around the causes of this error we may update this message.
