src/npm_install/snapshots/errors___npm_install_npm_install_error.snap
---
source: buildpacks/nodejs/src/npm_install/errors.rs
---
- Debug Info:
  - Command failed `npm install`
    exit status: 1
    stdout: <empty>
    stderr: <empty>

! Failed to install Node modules
!
! The Heroku Node.js buildpack uses the command `npm install` to install your Node modules. This command failed and the buildpack cannot continue. This error can occur due to an unstable network connection. See the log output above for more information.
!
! Suggestions:
! - Ensure that this command runs locally without error (exit status = 0).
! - Check the status of the upstream Node module repository service at https://status.npmjs.org/
!
! Use the debug information above to troubleshoot and retry your build.
