src/npm_install/snapshots/errors___npm_install_package_json_parse_error.snap
---
source: buildpacks/nodejs/src/npm_install/errors.rs
---
- Debug Info:
  - key must be a string at line 1 column 2

! Error parsing `./package.json`
!
! The Heroku Node.js buildpack reads from `./package.json` to complete the build but the file isn't valid JSON.
!
! Suggestions:
! - Ensure the file follows the JSON format described at https://www.json.org/
!
! Use the debug information above to troubleshoot and retry your build.
