src/npm_install/snapshots/errors___npm_install_prune_dev_dependencies_error.snap
---
source: buildpacks/nodejs/src/npm_install/errors.rs
---
- Debug Info:
  - Command failed `npm prune --production`
    exit status: 1
    stdout: <empty>
    stderr: <empty>

! Failed to prune npm dev dependencies
!
! The Heroku Node.js buildpack uses the command `npm prune --production` to remove your dev dependencies from the production environment. This command failed and the buildpack cannot continue. See the log output above for more information.
!
! Suggestions:
! - Ensure that this command runs locally without error (exit status = 0).
!
! Use the debug information above to troubleshoot and retry your build.
